--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,9 @@ main {
 }
 
 .card-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
   max-width: 300px;
   padding: 1rem;
   border: 1px solid black;
@@ -27,4 +30,25 @@ main {
 .card-container figure img {
   width: 100%;
   height: 200px;
+}
+
+.card-price {
+  color: green;
+  font-size: 1.5rem;
+}
+
+.card-title {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.card-desc {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: box;
+  box-orient: vertical;
+  line-clamp: 2;
 }
