--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
+/* Global styles */
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
+/* Navbar styles */
 .navbar {
   display: flex;
   width: 100%;
@@ -14,10 +16,12 @@
   align-items: center;
 }
 
+/* Main content margin */
 main {
   margin-inline: 1rem;
 }
 
+/* Card container styles */
 .card-container {
   display: flex;
   flex-direction: column;
@@ -28,41 +32,103 @@ main {
   height: 390px;
 }
 
+/* Anchor tag styles */
 a {
   text-decoration: none;
   color: black;
 }
 
+/* Image styles inside card container */
 .card-container figure img {
   width: 100%;
   height: 200px;
+  object-fit: contain;
 }
 
+/* Card price styles */
 .card-price {
   color: green;
   font-size: 1.5rem;
 }
 
+/* Card title styles */
 .card-title {
   font-size: 1.2rem;
   font-weight: bold;
 }
 
+/* Card description styles */
 .card-desc {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
   overflow: hidden;
   text-overflow: ellipsis;
-  display: box;
   box-orient: vertical;
   line-clamp: 2;
 }
 
+/* Products list container styles */
 .products-list-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 1rem;
+}
+
+/* Product container styles */
+.product-container {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  width: 100%;
+}
+
+/* Image styles inside product container */
+.product-container figure img {
+  max-height: 60vh;
+  object-fit: contain;
+}
+
+/* Product image styles */
+.product-image {
+  border-right: 1px solid black;
+  padding-inline: 2rem;
+}
+
+/* Product description styles */
+.product-desc {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  padding-inline: 2rem;
+  max-width: 350px;
+}
+
+/* Media query for screen sizes less than 768px */
+@media only screen and (max-width: 768px) {
+  .product-container {
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+  }
+  .product-image {
+    border-right: none;
+    padding-inline: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .product-image img {
+    width: 100%;
+  }
+
+  .product-desc {
+    max-width: 100%;
+    padding-inline: 1rem;
+  }
 }
