--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,7 @@ a {
   padding-inline: 2rem;
 }
 
-.product-desc {
+.product-desc-container {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -131,7 +131,7 @@ a {
     width: 100%;
   }
 
-  .product-desc {
+  .product-desc-container {
     max-width: 100%;
     padding-inline: 1rem;
   }
