--- a/src/App.css
+++ b/src/App.css
@@ -85,13 +85,26 @@ a {
   padding-inline: 2rem;
 }
 
+.product-price {
+  color: green;
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
 .product-desc-container {
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 1.5rem;
   padding-inline: 2rem;
   max-width: 450px;
+}
+
+.product-desc h2 {
+  border-bottom: 1px solid black;
+  margin-bottom: 1rem;
+  padding-bottom: 0.5rem;
+  font-size: 1.3rem;
 }
 
 .add-btn {
