--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,19 @@
   width: 100%;
   padding: 1rem;
   padding-inline: 2rem;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+
+.logo a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo a span {
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 /* Card component styles */
