--- a/src/App.css
+++ b/src/App.css
@@ -135,6 +135,32 @@ a {
   outline: none;
 }
 
+/* Pagination styling */
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+}
+
+.pagination button {
+  margin: 0 0.25rem;
+  padding: 0.5rem 1rem;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.pagination button:disabled {
+  cursor: not-allowed;
+  background: green;
+  opacity: 0.5;
+}
+
+.pagination button:not(:disabled):hover {
+  background-color: green;
+}
+
 /* Media query for screen sizes less than 768px */
 @media only screen and (max-width: 768px) {
   .product-container {
