--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,8 @@
   gap: 0.2rem;
   max-width: 300px;
   padding: 1rem;
-  border: 1px solid black;
+  border: 1px solid #0000001a;
+  border-radius: 10px;
   height: 390px;
 }
 
