--- a/src/App.css
+++ b/src/App.css
@@ -169,12 +169,41 @@ a {
   gap: 1rem;
   max-width: 600px;
   margin: 0 auto;
-  flex: 1;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding-inline: 10px;
+}
+
+.cart-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 
 .cart-title {
   width: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
+
+.cart-title .btn {
+  padding: 1px 10px;
+  border-radius: 5px;
+  margin-inline: 3px;
+  border: none;
+  font-size: larger;
+  text-align: center;
+  background-color: green;
+  cursor: pointer;
+}
+
+.cart-title .btn:disabled {
+  background-color: red;
+}
+
 .cart-image figure {
   border-right: 1px solid black;
   padding-right: 1rem;
