--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,27 @@
   align-items: center;
 }
 
+.cart {
+  position: relative;
+}
+
+.cart-count {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 10px;
+  font-size: 14px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 20px;
+  width: 20px;
+}
+
 .logo a {
   display: flex;
   justify-content: center;
