--- a/src/App.css
+++ b/src/App.css
@@ -291,6 +291,18 @@ a {
   margin: 5px auto;
 }
 
+.total-value {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.total-value h2 {
+  font-size: 16px;
+  font-weight: 100;
+  padding: 10px 0px;
+}
+
 /* Media query for screen sizes less than 768px */
 @media only screen and (max-width: 768px) {
   .product-container {
