--- a/src/App.css
+++ b/src/App.css
@@ -295,12 +295,23 @@ a {
   display: flex;
   width: 100%;
   justify-content: space-between;
+  align-items: center;
 }
 
 .total-value h2 {
   font-size: 16px;
   font-weight: 100;
   padding: 10px 0px;
+}
+
+.link-btn {
+  margin-top: 2rem;
+  padding: 13px 10px;
+  background-color: black;
+  color: white;
+  text-align: center;
+  border-radius: 5px;
+  font-weight: bold;
 }
 
 /* Media query for screen sizes less than 768px */
