--- a/src/App.css
+++ b/src/App.css
@@ -314,6 +314,27 @@ a {
   font-weight: bold;
 }
 
+/* Form Styling for checkout! */
+
+.form-container {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 auto;
+  padding: 1rem;
+}
+
+.form-container div {
+  display: flex;
+  flex-direction: column;
+  padding: 10px 0;
+}
+
+.form-container div input {
+  padding: 5px;
+}
+
 /* Media query for screen sizes less than 768px */
 @media only screen and (max-width: 768px) {
   .product-container {
