--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,7 @@ a {
   background-color: green;
   color: white;
   max-width: 350px;
+  cursor: pointer;
 }
 
 .add-btn:hover,
@@ -312,6 +313,7 @@ a {
   text-align: center;
   border-radius: 5px;
   font-weight: bold;
+  cursor: pointer;
 }
 
 /* Form Styling for checkout! */
@@ -333,6 +335,10 @@ a {
 
 .form-container div input {
   padding: 5px;
+}
+
+button:disabled {
+  cursor: not-allowed;
 }
 
 /* Media query for screen sizes less than 768px */
