--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,8 @@
   padding-inline: 2rem;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 1px solid black;
+  margin-bottom: 1rem;
 }
 
 .cart {
