--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,32 @@
   margin-bottom: 1rem;
 }
 
+.home-page {
+  position: relative;
+  height: 500px;
+  width: 100%;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.home-page::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-image: url('./assets/banner.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: brightness(50%);
+  z-index: -1;
+}
+
 .cart {
   position: relative;
 }
